# T2

./: CMakeLists.txt  README.md  main.cpp  translit.cpp  translit.h
src/: translit.cpp  translit.h
